--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 USERNAME=admin
 PASSWORD=XLM6h52tqTtkscoX
 MONGODB_CONNECTION_STRING=mongodb+srv://admin:XLM6h52tqTtkscoX@booking-app.fmp35g9.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET_KEY=b1TjB3Rt7Lwve94WigXOn6VMCT8vrGXo
