--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "Hotel booking app developed using React, TypeScript, MongoDB, Stripe.",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon"
+
   },
   "author": "",
   "license": "ISC",
