--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,6 @@
-backend/node_modules
-backend/package-lock.json
-frontend/package-lock.json
-
-frontend/logs
-
-frontend/*.log
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
-frontend/pnpm-debug.log*
-frontend/lerna-debug.log*
-
-frontend/node_modules
-frontend/dist
-frontend/dist-ssr
-frontend/*.local
-
-# Editor directories and files
-frontend/.vscode/*
-frontend/!.vscode/extensions.json
-frontend/.idea
-frontend/.DS_Store
-frontend/*.suo
-frontend/*.ntvs*
-frontend/*.njsproj
-frontend/*.sln
-frontend/*.sw?
+node_modules
+.env
+.env.e2e
+.vscode
+dist
+package-lock.json
