Add my-hotels endpoint

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,8 @@ PASSWORD=XLM6h52tqTtkscoX
 MONGODB_CONNECTION_STRING=mongodb+srv://admin:XLM6h52tqTtkscoX@booking-app.fmp35g9.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET_KEY=b1TjB3Rt7Lwve94WigXOn6VMCT8vrGXo
 FRONTEND_URL=http://localhost:5173
+
+# Cloudinary Variables
+CLOUDINARY_CLOUD_NAME=dhv6mymnr
+CLOUDINARY_API_KEY=834756985599752
+CLOUDINARY_API_SECRET=MgIyOh4dNOG3nSBqy0VTDmw45ZU
